@@ -35,6 +35,13 @@
 <div class="topic">
 	<h3>CHANGELOG</h3>
 	<div class="pad">
+		<span><b>2020-04-24</b></span>
+		<div id="changelog20200424">
+			<ul>
+				<li>Fixed Finger Offensive damage computation</li>
+			</ul>
+		</div>
+		<br/>
 		<span><b>2020-04-19</b></span>
 		<div id="changelog20200412">
 			<ul>
