@@ -1,3 +1,6 @@
+[2020-04-24]
+- Fixed Finger Offensive damage computation
+
 [2020-04-19]
 - Fixed Bragi behaviour
 - Fixed hard DEF formula
